# tech-news

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
config/: criteria.md  sources.toml
src/tech_news/: __init__.py  mailer.py  main.py  rank.py  sources.py  store.py  synthesize.py
src/tech_news/templates/: digest.html
tests/: conftest.py  test_rank.py  test_schedule.py  test_sources.py  test_store.py  test_template.py
