[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-news"
version = "0.1.0"
description = "Daily Gmail digest of semiconductor capital equipment industry news"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.92.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "beautifulsoup4>=4.12.3",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
]

[project.scripts]
tech-news = "tech_news.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tech_news = ["templates/*.html"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
